--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@typescript-eslint/parser": "^7.15.0",
     "@vanilla-extract/vite-plugin": "^4.0.13",
     "@vitejs/plugin-react": "^4.3.1",
+    "clsx": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "tailwind-merge": "^2.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
